@@ -1,4 +1,4 @@
-CHANGES.txt - 2.0.3 - 2015-05-05
+CHANGES.txt - 2.0.3 - 2015-05-06
 --------------------------------
 
 CHANGES IN CUPS V2.0.3
@@ -12,6 +12,8 @@ CHANGES IN CUPS V2.0.3
 	- Fixed lpadmin when both -m and -o are used (STR #4578)
 	- The web interface always showed support for 2-sided printing
 	  (STR #4595)
+	- cupsRasterReadHeader did not fully validate the raster header
+	  (STR #4596)
 	- Added Russian translation (STR #4577)
 
 
